--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ephp/installer",
+    "name": "wangxian/ephp-installer",
     "description": "ePHP is a PHP micro framework that helps you quickly write simple yet powerful web applications and APIs.",
     "type": "project",
     "require": {
@@ -15,9 +15,8 @@
 
     "autoload" : {
         "classmap" : [],
-        "files": ["ephp/src/Misc/helpers.php"],
+        "files": [],
         "psr-4": {
-            "ePHP\\": "ephp/src/",
             "App\\": "app/"
         }
     }
