--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "ePHP is a PHP micro framework that helps you quickly write simple yet powerful web applications and APIs.",
     "type": "project",
     "require": {
-        "wangxian/ephp": "7.*"
+        "wangxian/ephp": "dev-master"
     },
     "license": "MIT",
     "authors": [
