更新：php-fpm 相关配置

--- a/docker/php-fpm.conf
+++ b/docker/php-fpm.conf
@@ -6,31 +6,29 @@ pid = /var/run/php-fpm.pid
 user = nginx
 group = nginx
 listen = /var/run/php-fpm.sock
+; listen = 127.0.0.1:9000
 listen.owner = nginx
 listen.group = nginx
 listen.allowed_clients = 127.0.0.1
+listen.backlog = 65535
 
 pm = ondemand
-pm.max_requests = 500
-pm.status_path = /fpm-status
+; pm = static
 pm.max_children = 8
+pm.max_requests = 5000
 pm.process_idle_timeout = 10s
+pm.status_path = /fpm-status
 
+request_terminate_timeout = 10s
 request_slowlog_timeout = 60s
 slowlog = /proc/self/fd/2
 
-listen.backlog = 65535
-request_terminate_timeout = 180s
-
 ping.path = /fpm-ping
 ping.response = pong
+chdir = /app/public
 
 env[HOSTNAME] = $HOSTNAME
 env[PATH] = /usr/local/bin:/usr/bin:/bin
-
-
-chdir = /app/public
-php_flag[display_errors] = on
 
 php_admin_value[date.timezone] = PRC
 php_admin_value[session.name] = pppid
@@ -38,11 +36,15 @@ php_admin_value[upload_max_filesize] = 15M
 php_admin_value[post_max_size] = 15M
 php_admin_value[always_populate_raw_post_data] = -1
 php_admin_value[output_buffering] = 0
-php_admin_value[php_value max_input_time] = 3600
-php_admin_value[php_value max_execution_time] = 3600
+php_admin_value[max_input_time] = 60
+php_admin_value[max_execution_time] = 30
 php_admin_value[default_socket_timeout] = 180
 php_admin_value[memory_limit] = 256M
+php_admin_value[variables_order] = GPCS
+php_admin_value[request_order] = GP
 
+php_flag[display_errors] = on
+php_admin_flag[expose_php] = off
 php_admin_flag[opcache.consistency_checks] = off
 php_admin_flag[opcache.dups_fix] = on
 php_admin_flag[opcache.load_comments] = on
