--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-    "name": "wangxian/ephp-installer",
-    "description": "ePHP is a PHP micro framework that helps you quickly write simple yet powerful web applications and APIs.",
-    "type": "project",
-    "require": {
-        "wangxian/ephp": "~7.0"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "wangxian",
-            "email": "xian366@126.com"
-        }
-    ],
-
-    "autoload" : {
-        "classmap" : [],
-        "files": [],
-        "psr-4": {
-            "App\\": "app/"
-        }
+  "name": "wangxian/ephp-installer",
+  "description": "ePHP is a PHP micro framework that helps you quickly write simple yet powerful web applications and APIs.",
+  "type": "project",
+  "require": {
+    "wangxian/ephp": "~7.0",
+    "ext-json": "*"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "wangxian",
+      "email": "xian366@126.com"
     }
+  ],
+  "autoload": {
+    "classmap": [],
+    "files": [],
+    "psr-4": {
+      "App\\": "app/"
+    }
+  }
 }
