--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "ePHP is a PHP micro framework that helps you quickly write simple yet powerful web applications and APIs.",
   "type": "project",
   "require": {
-    "wangxian/ephp": "~7.0",
-    "ext-json": "*"
+    "wangxian/ephp": "~7.3"
   },
   "license": "MIT",
   "authors": [
